[tool.poetry]
name = "consumable"
version = "1.1.3"
description = "Bool that resets on use."
authors = ["taitep <taitep@taitep.se>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
